<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="#97252B"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="5"
        >

        <Button
            android:id="@+id/DateButton"
            android:layout_width="204dp"
            android:layout_height="wrap_content"
            android:text="Pick Date"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00"
            />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/date_text"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00"
            android:layout_weight = "1"/>


        <TextView
            android:id="@+id/time_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/date_text"
            android:text="@string/time_text"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00"
            android:layout_weight = "2"/>

        <EditText
            android:id="@+id/time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/time_text"
            android:ems="10"
            android:inputType="time"
            android:text="" />

        <TextView
            android:id="@+id/startPointText"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/time"
            android:text="@string/s_l_text"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00"
            android:layout_weight = "3"/>

        <EditText
            android:id="@+id/startPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/startPointText"
            android:ems="10"
            android:inputType="text"
            android:text="" />

        <TextView
            android:id="@+id/des_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/startPoint"
            android:text="@string/des_text"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00"
            android:layout_weight = "4"/>

        <EditText
            android:id="@+id/destination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/des_text"
            android:ems="10"
            android:inputType="text"

            android:text="" />

        <TextView
            android:id="@+id/number_text"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_below="@+id/destination"
            android:text="@string/n_p_text"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00"
            android:layout_weight = "5"/>

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/number_text"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <Button
            android:id="@+id/createARide_button"
            android:layout_width="204dp"
            android:layout_height="63dp"
            android:layout_below="@+id/number"
            android:text="Create A Ride"
            android:textColor="#97252B"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:background="#F3CD00" />

    </LinearLayout>
</android.support.constraint.ConstraintLayout>